--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "remix": "^2.16.5",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
