refactor: remove unused Footer component and clean up code
- Removed the unused Footer component from App.tsx to simplify the layout
- Fixed a typo in tsconfig.app.json by renaming `noUncheckedIndexAccess` to `noUncheckedIndexedAccess`
- Renamed unused state variables in Home.tsx to indicate their purpose more clearly

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,9 +21,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexAccess": true,
+    "noUncheckedIndexedAccess": true,
     "noUncheckedSideEffectImports": true,
-    
+
     /* Paths */
     "baseUrl": ".",
     "paths": {
